2009-04-02  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp: Upgrade libsvm to 2.89
	(svm_print_string): renamed from print_string

2009-04-02  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: remove functions not suitable for preemptive MT
	* zthread.d (THREAD-WAIT, THREAD-STATE) [MULTITHREAD]: remove
	* constsym.d (THREAD-WAIT, THREAD-STATE) [MULTITHREAD]: ditto
	* subr.d (THREAD-WAIT, THREAD-STATE) [MULTITHREAD]: ditto
	* threads.lisp (*THREAD-WHOSTATE*, THREAD-WHOSTATE MAKE-LOCK)
	(THREAD-LOCK, THREAD-UNLOCK) [MULTITHREAD]: remove

2009-03-23  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: Fix uninitialized package mutexes
	* spvw.d (initmem) [MULTITHREAD]: initialize O(all_mutexes)
	* constobj.d (all_mutexes) [MULTITHREAD]: do not initialize

2009-03-20  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: FreeBSD build fixes
	* lispbibl.d (per_thread) [MULTITHREAD]: gcc on FreeBSD supports
	__thread qualifier
	* xthread.d (PTHREAD_MUTEX_RECURSIVE_NP) [MULTITHREAD]: define it on
	FreeBSD

2009-03-17  Vladimir Tzankov  <vtzankov@gmail.com>

	faster re-entrant circularity detection
	* spvw_circ.d (pointer_set, pointer_set_init, pointer_set_free)
	(pointer_set_insert_aux, pointer_set_insert): add. implements simple
	open addressing hash set based on the object address in the lisp heap.
	use it by default

2009-02-27  Vladimir Tzankov  <vtzankov@gmail.com>

	* eval.d (interpret_bytecode_ JMP) [MULTITHREAD]: remove GC safe
	points at JMP instructions. currently this damages heap

2009-02-27  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_genera1.d (build_old_generation_cache) [MULTITHREAD]: merge
	PROT_READ_WRITE areas. fixes corner cases with pinned objects that
	share physical memory pages

2009-02-27  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: release all thread resources upon termination
	* lispbibl.d (WITH_STOPPED_THREAD): remove (was used only by
	THREAD-INTERRUPT and is not suitable anymore)